assets/css/theme.css
/* ... */
.bg-gray {
	fill:#ced4da !important;
}
.bg-indigo {
	fill:#502c6c !important;
}
.bg-orange {
	fill:#fbb500 !important;
}
.bg-lightblue {
	fill:#e8f3ec !important;
}
.card .date {
	position:absolute;
	top:20px;
	right:20px;
	z-index:1;
	background:#dc3545;
	width:55px;
	height:55px;
	padding:12.5px 0;
	border-radius:100%;
	color:#FFFFFF;
	font-weight:700;
	text-align:center;
	-webkti-box-sizing:border-box;
	box-sizing:border-box;
}
.card .date .day {
	font-size:16px;
	line-height:1;
}
.card .date .month {
	font-size:11px;
	text-transform:uppercase;
}
.card a:hover {
	text-decoration:none;
	color:#28a745;
}
.card-pricing .card ul li {
	margin-bottom:1.5rem;
}
.iconbox {
	border:1px solid;
	text-align:center;
	display:inline-block;
}
.iconbox.iconsmall {
	width:40px;
	height:40px;
	line-height:40px;
	font-size:1rem;
}
.iconbox.iconmedium {
	width:60px;
	height:60px;
	line-height:60px;
	font-size:1.8rem;
}
.iconbox.iconlarge {
	width:80px;
	height:80px;
	line-height:80px;
	font-size:2.2rem;
}
.alert-primary {
	color:#fff;
	background-color:#28a745;
	border-color:#28a745;
}
.alert-primary hr {
	border-top-color:#038f6a;
}
.alert-primary .alert-link {
	color:#e6e6e6;
}
.alert-secondary {
	color:#fff;
	background-color:#6c757d;
	border-color:#6c757d;
}
.alert-secondary hr {
	border-top-color:#6a1fdb;
}
.alert-secondary .alert-link {
	color:#e6e6e6;
}
.alert-success {
	color:#fff;
	background-color:#28a745;
	border-color:#28a745;
}
.alert-success hr {
	border-top-color:#038f6a;
}
.alert-success .alert-link {
	color:#e6e6e6;
}
.alert-info {
	color:#fff;
	background-color:#17a2b8;
	border-color:#17a2b8;
}
.alert-info hr {
	border-top-color:#08d29d;
}
.alert-info .alert-link {
	color:#e6e6e6;
}
.alert-warning {
	color:#fff;
	background-color:#ffc107;
	border-color:#ffc107;
}
.alert-warning hr {
	border-top-color:#e9ca00;
}
.alert-warning .alert-link {
	color:#e6e6e6;
}
.alert-danger {
	color:#fff;
	background-color:#dc3545;
	border-color:#dc3545;
}
.alert-danger hr {
	border-top-color:#e81854;
}
.alert-danger .alert-link {
	color:#e6e6e6;
}
.alert-light {
	color: #818182;
	background-color: #fefefe;
	border-color: #fdfdfe;
  }
  .alert-light hr {
	border-top-color: #ececf6;
  }
  .alert-light .alert-link {
	color: #686868;
  }
.alert-dark {
	color:#fff;
	background-color:#212529;
	border-color:#212529;
}
.alert-dark hr {
	border-top-color:#16181b;
}
.alert-dark .alert-link {
	color:#e6e6e6;
}
.alert-white {
	color:#fff;
	background-color:white;
	border-color:white;
}
.alert-white hr {
	border-top-color:#f2f2f2;
}
.alert-white .alert-link {
	color:#e6e6e6;
}
.alert-purple {
	color:#fff;
	background-color:#6f42c1;
	border-color:#6f42c1;
}
.alert-purple hr {
	border-top-color:#a159d8;
}
.alert-purple .alert-link {
	color:#e6e6e6;
}
.alert-salmon {
	color:#fff;
	background-color:#ff977a;
	border-color:#ff977a;
}
.alert-salmon hr {
	border-top-color:#ff8361;
}
.alert-salmon .alert-link {
	color:#e6e6e6;
}
.alert-cyan {
	color:#fff;
	background-color:#35bdff;
	border-color:#35bdff;
}
.alert-cyan hr {
	border-top-color:#1cb5ff;
}
.alert-cyan .alert-link {
	color:#e6e6e6;
}
.alert-gray {
	color:#fff;
	background-color:#ced4da;
	border-color:#ced4da;
}
.alert-gray hr {
	border-top-color:#bfc7cf;
}
.alert-gray .alert-link {
	color:#e6e6e6;
}
.alert-indigo {
	color:#fff;
	background-color:#502c6c;
	border-color:#502c6c;
}
.alert-indigo hr {
	border-top-color:#43255a;
}
.alert-indigo .alert-link {
	color:#e6e6e6;
}
.alert-orange {
	color:#fff;
	background-color:#fbb500;
	border-color:#fbb500;
}
.alert-orange hr {
	border-top-color:#e2a300;
}
.alert-orange .alert-link {
	color:#e6e6e6;
}
.alert-lightblue {
	color:#fff;
	background-color:#e8f3ec;
	border-color:#e8f3ec;
}
.alert-lightblue hr {
	border-top-color:#d7eade;
}
.alert-lightblue .alert-link {
	color:#e6e6e6;
}
ul.list-unstyled li {
	margin-bottom:.3rem;
}
ol.list-featured {
	counter-reset:my-awesome-counter;
	list-style:none;
	padding-left:0;
}
ol.list-featured li {
	counter-increment:my-awesome-counter;
	display:flex;
	font-size:0.8rem;
}
ol.list-featured li:before {
    content: "0" counter(my-awesome-counter);
    font-weight: bold;
    font-size: 2rem;
    margin-right: 0.5rem;
    font-family: Arial;
    line-height: 1;
    opacity: .5;
}
.catlist .sep:last-child {
	display:none;
}
footer {
	margin-top:50px;
	z-index:1022;
	position:relative;
}
.sticky-top-offset {
	top:70px;
}
.homefirstpage .main-loop .main-loop-card:nth-child(-n+5) {
	display:none !important;
}
.excerpt {
    color: rgba(0,0,0,0.59);
    margin-top:10px;
}
article {
	font-size:20px;
	line-height:1.86;
    font-family:Lora;
}
.article-headline {
    font-family: Georgia,Times,"Times New Roman",serif;
    font-size: 3.2rem;
    font-weight: 400;
    line-height: 1.15;
    color: #222222;
}
article p,article pre,article figure,article img,article blockquote,article iframed,article embed {
	margin-bottom:2rem;
}
article blockquote {
	padding-left:40px;
	margin-left:0px;
	font-style:italic;
	position:relative;
}
article blockquote:before {
	content:"“";
	font-family:Georgia;
	font-size:8rem;
	margin:-1rem 2rem 0 -3.9rem;
	position:absolute;
	opacity:1;
	float:left;
	line-height:1;
}
article:first-letter {
	float:left;
	font-size:5em;
	line-height:1;
	margin:0 .2em 0 0;
	vertical-align:top;
}
article h1,article h2,article h3,article h4,article h5,article h6,article .h1,article .h2,article .h3,article .h4,article .h5,article .h6 {
	margin-bottom:2rem;
	margin-top:2rem;
	font-weight:600;
}
.alertbar {
	box-shadow:0 -3px 10px 0 rgba(0,0,0,.0785);
	position:fixed;
	bottom:0;
	left:0;
	background-color:#fff;
	width:100%;
	padding:20px 0;
	z-index:1021;
	display:none;
}
.alertbar img {
	border-radius:2px;
}
.spanborder {
	border-bottom:1px solid #e8f3ec;
	margin-bottom:2rem;
}
.spanborder span {
	border-bottom:1px solid rgba(0,0,0,0.44);
	display:inline-block;
	padding-bottom:20px;
	margin-bottom:-1px;
}
/* ... */

